# gartner-ai-translator

./: .gitignore  .vercelignore  Dockerfile  README.md  docker-compose.yml  edtech_glossary.json  package-lock.json  package.json  pyproject.toml  record.md  requirements.txt  vercel.json
api/: index.py  upload.js  upload.mjs
back/: Dockerfile  pyproject.toml
back/data/: glossary.json  users.json
back/src/: translate_cli.py
back/src/api/: main.py
back/src/core/: config.py  db.py  document_processor.py  translators.py
front/: Dockerfile  package-lock.json  package.json
front/src/: App.tsx  api.ts  i18n.ts  index.css  supabaseClient.ts
front/src/components/: HelpChatbot.tsx  Layout.tsx
front/src/context/: AuthContext.tsx
front/src/pages/: AdminUsers.tsx  Dashboard.tsx  FAQ.tsx  History.tsx  Login.tsx
py/: app.py  translate_cli.py  translate_pdf.py  visualize_blocks.py
py/core/: auth.py  config.py  db.py  document_processor.py  translators.py
