[project]
name = "gartner-eng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deep-translator>=1.11.4",
    "google-genai>=1.68.0",
    "anthropic>=0.25.0",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "streamlit-oauth>=0.1.0",
    "groq>=1.1.1",
    "openai>=2.29.0",
    "pandas>=2.3.3",
    "pikepdf>=10.5.1",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
    "tqdm>=4.67.3",
    "watchdog>=6.0.0",
]
